--- a/main.css
+++ b/main.css
@@ -101,14 +101,13 @@ body{
 }
 
 header{
-  z-index: 10;
+  z-index: 1;
   position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #181818;
   width: 100vw;
-  
 }
 
 .logo{
@@ -422,8 +421,10 @@ input:focus{
 
 textarea{
   border:solid rgba(128, 128, 128, 0.726) 1px;
+  border-radius: 4px;
   padding: 12px 8px;
-  width:100%
+  width:100%;
+  resize: none;
 }
 textarea:focus{
   border:1px solid rgb(59, 134, 172);
@@ -630,6 +631,9 @@ input[type=email]:focus{
 
   header{
     height: 78px;
+  }
+  .logo h1{
+    margin: 0px;
   }
 
   .toggle{
