--- a/main.css
+++ b/main.css
@@ -198,7 +198,7 @@ a:hover{
   color: white;
   font-weight: normal;
   font-size: 20px;
-  border-radius: 3%;
+  border-radius: 8px;
   padding: 16px 28px;
   transition-property:background;
     
@@ -338,7 +338,7 @@ svg{
   width: 45px;
   line-height: 2px;
   margin-right: 3px;
-  border-radius: 40%;
+  border-radius: 12px;
 }
 
 .project img{
@@ -571,9 +571,6 @@ input[type=email]:focus{
     display: inline-block;
     font-size: 80%;
     width: 44px;
-    line-height: 0px;
-    margin-right: 2px;
-    border-radius: 40%;
     font-size: 12px;
   }
   .space{
@@ -743,8 +740,6 @@ input[type=email]:focus{
     display: inline-block;
     width: 60px;
     line-height: 0px;
-    margin-right: 4px;
-    border-radius: 40%;
     font-size: 12px;
     padding: 14px 0px;
   }
