--- a/main.css
+++ b/main.css
@@ -486,18 +486,19 @@ input[type=email]:focus{
 .footer-back p, .footer-back h2{
   font-weight: normal;
   text-align: left;
-  line-height: 14px;
   background: none;
   color: rgb(255, 255, 255);
+  padding: 0;
 }
 .footer-back p{
-  font-size: 12px;
+  font-size: 16px;
+  margin: 8px 0;
 }
 .footer-back a{
-  font-size: 12px;
+  font-size: 16px;
+  margin: 8px 0;
   font-weight: normal;
   text-align: left;
-  line-height: 10px;
   background: none;
   color: rgb(255, 255, 255);
 }
