--- a/main.css
+++ b/main.css
@@ -782,6 +782,23 @@ input[type=email]{
     color: rgb(255, 255, 255);
   }
 
+  .footer-back{
+    display: block;
+  }
+
+  .footer-back > div {
+    margin-bottom: 30px;
+  }
+
+  h1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
 }
 
 .hide{
