--- a/main.css
+++ b/main.css
@@ -727,6 +727,9 @@ input[type=email]{
   }
 }
 @media only screen and (max-width: 700px){
+  .header-content h1 {
+    margin: 20px 0;
+  }
   .project h2{
     font-size: 34px;
     margin-bottom: 30px;
